--- a/基础泰语一次册第十一课词汇.md
+++ b/基础泰语一次册第十一课词汇.md
@@ -1,193 +1,205 @@
-ตัวเลข	-	ตัวเลข	-	Number, digit	-	ตัวเลข	-	ตัวเลข	-	ตัวเลข	-	ตัวเลข	-	ตัวเลข	-	ตัวเลข	-	Number, digit
+Number, digit	/	ตัวเลข	/	ตัวเลข	/	ตัวเลข	/	ตัวเลข	/	ตัวเลข	/	ตัวเลข	/	ตัวเลข	/	ตัวเลข	/	ตัวเลข	/	Number, digit
 
-วิธี	-	วิธี	-	Method, way	-	วิธี	-	วิธี	-	วิธี	-	วิธี	-	วิธี	-	วิธี	-	Method, way
+Method, way	/	วิธี	/	วิธี	/	วิธี	/	วิธี	/	วิธี	/	วิธี	/	วิธี	/	วิธี	/	วิธี	/	Method, way
 
-ดังนี้	-	ดังนี้	-	As follows	-	ดังนี้	-	ดังนี้	-	ดังนี้	-	ดังนี้	-	ดังนี้	-	ดังนี้	-	As follows
+As follows	/	ดังนี้	/	ดังนี้	/	ดังนี้	/	ดังนี้	/	ดังนี้	/	ดังนี้	/	ดังนี้	/	ดังนี้	/	ดังนี้	/	As follows
 
-หน่วย	-	หน่วย	-	Unit	-	หน่วย	-	หน่วย	-	หน่วย	-	หน่วย	-	หน่วย	-	หน่วย	-	Unit
+Unit	/	หน่วย	/	หน่วย	/	หน่วย	/	หน่วย	/	หน่วย	/	หน่วย	/	หน่วย	/	หน่วย	/	หน่วย	/	Unit
 
-สิบ	-	สิบ	-	Ten	-	สิบ	-	สิบ	-	สิบ	-	สิบ	-	สิบ	-	สิบ	-	Ten
+Ten	/	สิบ	/	สิบ	/	สิบ	/	สิบ	/	สิบ	/	สิบ	/	สิบ	/	สิบ	/	สิบ	/	Ten
 
-ร้อย	-	ร้อย	-	Hundred	-	ร้อย	-	ร้อย	-	ร้อย	-	ร้อย	-	ร้อย	-	ร้อย	-	Hundred
+Hundred	/	ร้อย	/	ร้อย	/	ร้อย	/	ร้อย	/	ร้อย	/	ร้อย	/	ร้อย	/	ร้อย	/	ร้อย	/	Hundred
 
-พัน	-	พัน	-	Thousand	-	พัน	-	พัน	-	พัน	-	พัน	-	พัน	-	พัน	-	Thousand
+Thousand	/	พัน	/	พัน	/	พัน	/	พัน	/	พัน	/	พัน	/	พัน	/	พัน	/	พัน	/	Thousand
 
-หมื่น	-	หมื่น	-	Ten thousand	-	หมื่น	-	หมื่น	-	หมื่น	-	หมื่น	-	หมื่น	-	หมื่น	-	Ten thousand
+Ten thousand	/	หมื่น	/	หมื่น	/	หมื่น	/	หมื่น	/	หมื่น	/	หมื่น	/	หมื่น	/	หมื่น	/	หมื่น	/	Ten thousand
 
-แสน	-	แสน	-	Hundred thousand	-	แสน	-	แสน	-	แสน	-	แสน	-	แสน	-	แสน	-	Hundred thousand
+Hundred thousand	/	แสน	/	แสน	/	แสน	/	แสน	/	แสน	/	แสน	/	แสน	/	แสน	/	แสน	/	Hundred thousand
 
-ล้าน	-	ล้าน	-	Million	-	ล้าน	-	ล้าน	-	ล้าน	-	ล้าน	-	ล้าน	-	ล้าน	-	Million
+Million	/	ล้าน	/	ล้าน	/	ล้าน	/	ล้าน	/	ล้าน	/	ล้าน	/	ล้าน	/	ล้าน	/	ล้าน	/	Million
 
-เอ็ด	-	เอ็ด	-	One (used in 21, 31, etc.)	-	เอ็ด	-	เอ็ด	-	เอ็ด	-	เอ็ด	-	เอ็ด	-	เอ็ด	-	One (used in 21, 31, etc.)
+One (used in 21, 31, etc.)	/	เอ็ด	/	เอ็ด	/	เอ็ด	/	เอ็ด	/	เอ็ด	/	เอ็ด	/	เอ็ด	/	เอ็ด	/	เอ็ด	/	One (used in 21, 31, etc.)
 
-เศษส่วน	-	เศษส่วน	-	Fraction	-	เศษส่วน	-	เศษส่วน	-	เศษส่วน	-	เศษส่วน	-	เศษส่วน	-	เศษส่วน	-	Fraction
+Fraction	/	เศษส่วน	/	เศษส่วน	/	เศษส่วน	/	เศษส่วน	/	เศษส่วน	/	เศษส่วน	/	เศษส่วน	/	เศษส่วน	/	เศษส่วน	/	Fraction
 
-เศษส่วนทศนิยม	-	เศษส่วนทศนิยม	-	Decimal fraction	-	เศษส่วนทศนิยม	-	เศษส่วนทศนิยม	-	เศษส่วนทศนิยม	-	เศษส่วนทศนิยม	-	เศษส่วนทศนิยม	-	เศษส่วนทศนิยม	-	Decimal fraction
+Decimal fraction	/	เศษส่วนทศนิยม	/	เศษส่วนทศนิยม	/	เศษส่วนทศนิยม	/	เศษส่วนทศนิยม	/	เศษส่วนทศนิยม	/	เศษส่วนทศนิยม	/	เศษส่วนทศนิยม	/	เศษส่วนทศนิยม	/	เศษส่วนทศนิยม	/	Decimal fraction
 
-ศูนย์	-	ศูนย์	-	Zero	-	ศูนย์	-	ศูนย์	-	ศูนย์	-	ศูนย์	-	ศูนย์	-	ศูนย์	-	Zero
+Zero	/	ศูนย์	/	ศูนย์	/	ศูนย์	/	ศูนย์	/	ศูนย์	/	ศูนย์	/	ศูนย์	/	ศูนย์	/	ศูนย์	/	Zero
 
-จุด	-	จุด	-	Point, dot, decimal point	-	จุด	-	จุด	-	จุด	-	จุด	-	จุด	-	จุด	-	Point, dot, decimal point
+Point, dot, decimal point	/	จุด	/	จุด	/	จุด	/	จุด	/	จุด	/	จุด	/	จุด	/	จุด	/	จุด	/	Point, dot, decimal point
 
-ร้อยละ	-	ร้อยละ	-	Percentage	-	ร้อยละ	-	ร้อยละ	-	ร้อยละ	-	ร้อยละ	-	ร้อยละ	-	ร้อยละ	-	Percentage
+Percentage	/	ร้อยละ	/	ร้อยละ	/	ร้อยละ	/	ร้อยละ	/	ร้อยละ	/	ร้อยละ	/	ร้อยละ	/	ร้อยละ	/	ร้อยละ	/	Percentage
 
-ห้าร้อยละ	-	ห้าร้อยละ	-	Five hundred percent (500%)	-	ห้าร้อยละ	-	ห้าร้อยละ	-	ห้าร้อยละ	-	ห้าร้อยละ	-	ห้าร้อยละ	-	ห้าร้อยละ	-	Five hundred percent (500%)
+Five percent (5%)	/	ร้อยละห้า	/	ร้อยละห้า	/	ร้อยละห้า	/	ร้อยละห้า	/	ร้อยละห้า	/	ร้อยละห้า	/	ร้อยละห้า	/	ร้อยละห้า	/	ร้อยละห้า	/	Five percent (5%)
 
-เปอร์เซ็นต์	-	เปอร์เซ็นต์	-	Percent (%)	-	เปอร์เซ็นต์	-	เปอร์เซ็นต์	-	เปอร์เซ็นต์	-	เปอร์เซ็นต์	-	เปอร์เซ็นต์	-	เปอร์เซ็นต์	-	Percent (%)
+Five hundred percent (500%)	/	ห้าร้อยละ	/	ห้าร้อยละ	/	ห้าร้อยละ	/	ห้าร้อยละ	/	ห้าร้อยละ	/	ห้าร้อยละ	/	ห้าร้อยละ	/	ห้าร้อยละ	/	ห้าร้อยละ	/	Five hundred percent (500%)
 
-คณะ	-	คณะ	-	Faculty, department, committee	-	คณะ	-	คณะ	-	คณะ	-	คณะ	-	คณะ	-	คณะ	-	Faculty, department, committee
+Percent (%)	/	เปอร์เซ็นต์	/	เปอร์เซ็นต์	/	เปอร์เซ็นต์	/	เปอร์เซ็นต์	/	เปอร์เซ็นต์	/	เปอร์เซ็นต์	/	เปอร์เซ็นต์	/	เปอร์เซ็นต์	/	เปอร์เซ็นต์	/	Percent (%)
 
-คณะกรรมการ	-	คณะกรรมการ	-	Committee	-	คณะกรรมการ	-	คณะกรรมการ	-	คณะกรรมการ	-	คณะกรรมการ	-	คณะกรรมการ	-	คณะกรรมการ	-	Committee
+Faculty, department, committee	/	คณะ	/	คณะ	/	คณะ	/	คณะ	/	คณะ	/	คณะ	/	คณะ	/	คณะ	/	คณะ	/	Faculty, department, committee
 
-คณะผู้แทน	-	คณะผู้แทน	-	Delegation, representatives	-	คณะผู้แทน	-	คณะผู้แทน	-	คณะผู้แทน	-	คณะผู้แทน	-	คณะผู้แทน	-	คณะผู้แทน	-	Delegation, representatives
+Committee	/	คณะกรรมการ	/	คณะกรรมการ	/	คณะกรรมการ	/	คณะกรรมการ	/	คณะกรรมการ	/	คณะกรรมการ	/	คณะกรรมการ	/	คณะกรรมการ	/	คณะกรรมการ	/	Committee
 
-เอเชีย / เอเซีย	-	เอเชีย / เอเซีย	-	Asia	-	เอเชีย / เอเซีย	-	เอเชีย / เอเซีย	-	เอเชีย / เอเซีย	-	เอเชีย / เอเซีย	-	เอเชีย / เอเซีย	-	เอเชีย / เอเซีย	-	Asia
+Delegation, representatives	/	คณะผู้แทน	/	คณะผู้แทน	/	คณะผู้แทน	/	คณะผู้แทน	/	คณะผู้แทน	/	คณะผู้แทน	/	คณะผู้แทน	/	คณะผู้แทน	/	คณะผู้แทน	/	Delegation, representatives
 
-แอฟริกา	-	แอฟริกา	-	Africa	-	แอฟริกา	-	แอฟริกา	-	แอฟริกา	-	แอฟริกา	-	แอฟริกา	-	แอฟริกา	-	Africa
+Asia	/	เอเชีย / เอเซีย	/	เอเชีย / เอเซีย	/	เอเชีย / เอเซีย	/	เอเชีย / เอเซีย	/	เอเชีย / เอเซีย	/	เอเชีย / เอเซีย	/	เอเชีย / เอเซีย	/	เอเชีย / เอเซีย	/	เอเชีย / เอเซีย	/	Asia
 
-กัมพูชา	-	กัมพูชา	-	Cambodia	-	กัมพูชา	-	กัมพูชา	-	กัมพูชา	-	กัมพูชา	-	กัมพูชา	-	กัมพูชา	-	Cambodia
+Africa	/	แอฟริกา	/	แอฟริกา	/	แอฟริกา	/	แอฟริกา	/	แอฟริกา	/	แอฟริกา	/	แอฟริกา	/	แอฟริกา	/	แอฟริกา	/	Africa
 
-เวียดนาม	-	เวียดนาม	-	Vietnam	-	เวียดนาม	-	เวียดนาม	-	เวียดนาม	-	เวียดนาม	-	เวียดนาม	-	เวียดนาม	-	Vietnam
+Cambodia	/	กัมพูชา	/	กัมพูชา	/	กัมพูชา	/	กัมพูชา	/	กัมพูชา	/	กัมพูชา	/	กัมพูชา	/	กัมพูชา	/	กัมพูชา	/	Cambodia
 
-มาเลเซีย	-	มาเลเซีย	-	Malaysia	-	มาเลเซีย	-	มาเลเซีย	-	มาเลเซีย	-	มาเลเซีย	-	มาเลเซีย	-	มาเลเซีย	-	Malaysia
+Vietnam	/	เวียดนาม	/	เวียดนาม	/	เวียดนาม	/	เวียดนาม	/	เวียดนาม	/	เวียดนาม	/	เวียดนาม	/	เวียดนาม	/	เวียดนาม	/	Vietnam
 
-อินโดนีเซีย / อินโดเนเซีย	-	อินโดนีเซีย / อินโดเนเซีย	-	Indonesia	-	อินโดนีเซีย / อินโดเนเซีย	-	อินโดนีเซีย / อินโดเนเซีย	-	อินโดนีเซีย / อินโดเนเซีย	-	อินโดนีเซีย / อินโดเนเซีย	-	อินโดนีเซีย / อินโดเนเซีย	-	อินโดนีเซีย / อินโดเนเซีย	-	Indonesia
+Malaysia	/	มาเลเซีย	/	มาเลเซีย	/	มาเลเซีย	/	มาเลเซีย	/	มาเลเซีย	/	มาเลเซีย	/	มาเลเซีย	/	มาเลเซีย	/	มาเลเซีย	/	Malaysia
 
-ภาษาสิงหล	-	ภาษาสิงหล	-	Sinhala language	-	ภาษาสิงหล	-	ภาษาสิงหล	-	ภาษาสิงหล	-	ภาษาสิงหล	-	ภาษาสิงหล	-	ภาษาสิงหล	-	Sinhala language
+Indonesia	/	อินโดนีเซีย / อินโดเนเซีย	/	อินโดนีเซีย / อินโดเนเซีย	/	อินโดนีเซีย / อินโดเนเซีย	/	อินโดนีเซีย / อินโดเนเซีย	/	อินโดนีเซีย / อินโดเนเซีย	/	อินโดนีเซีย / อินโดเนเซีย	/	อินโดนีเซีย / อินโดเนเซีย	/	อินโดนีเซีย / อินโดเนเซีย	/	อินโดนีเซีย / อินโดเนเซีย	/	Indonesia
 
-ภาษาสวาฮีลี	-	ภาษาสวาฮีลี	-	Swahili language	-	ภาษาสวาฮีลี	-	ภาษาสวาฮีลี	-	ภาษาสวาฮีลี	-	ภาษาสวาฮีลี	-	ภาษาสวาฮีลี	-	ภาษาสวาฮีลี	-	Swahili language
+Sinhala language	/	ภาษาสิงหล	/	ภาษาสิงหล	/	ภาษาสิงหล	/	ภาษาสิงหล	/	ภาษาสิงหล	/	ภาษาสิงหล	/	ภาษาสิงหล	/	ภาษาสิงหล	/	ภาษาสิงหล	/	Sinhala language
 
-ภาษาฮาวซา	-	ภาษาฮาวซา	-	Hausa language	-	ภาษาฮาวซา	-	ภาษาฮาวซา	-	ภาษาฮาวซา	-	ภาษาฮาวซา	-	ภาษาฮาวซา	-	ภาษาฮาวซา	-	Hausa language
+Swahili language	/	ภาษาสวาฮีลี	/	ภาษาสวาฮีลี	/	ภาษาสวาฮีลี	/	ภาษาสวาฮีลี	/	ภาษาสวาฮีลี	/	ภาษาสวาฮีลี	/	ภาษาสวาฮีลี	/	ภาษาสวาฮีลี	/	ภาษาสวาฮีลี	/	Swahili language
 
-ตุรกี	-	ตุรกี	-	Turkey	-	ตุรกี	-	ตุรกี	-	ตุรกี	-	ตุรกี	-	ตุรกี	-	ตุรกี	-	Turkey
+Hausa language	/	ภาษาฮาวซา	/	ภาษาฮาวซา	/	ภาษาฮาวซา	/	ภาษาฮาวซา	/	ภาษาฮาวซา	/	ภาษาฮาวซา	/	ภาษาฮาวซา	/	ภาษาฮาวซา	/	ภาษาฮาวซา	/	Hausa language
 
-รวม	-	รวม	-	Include, total	-	รวม	-	รวม	-	รวม	-	รวม	-	รวม	-	รวม	-	Include, total
+Turkey	/	ตุรกี	/	ตุรกี	/	ตุรกี	/	ตุรกี	/	ตุรกี	/	ตุรกี	/	ตุรกี	/	ตุรกี	/	ตุรกี	/	Turkey
 
-ทั้ง	-	ทั้ง	-	Both, entire	-	ทั้ง	-	ทั้ง	-	ทั้ง	-	ทั้ง	-	ทั้ง	-	ทั้ง	-	Both, entire
+Include, total	/	รวม	/	รวม	/	รวม	/	รวม	/	รวม	/	รวม	/	รวม	/	รวม	/	รวม	/	Include, total
 
-ทั้งหมด	-	ทั้งหมด	-	All, total	-	ทั้งหมด	-	ทั้งหมด	-	ทั้งหมด	-	ทั้งหมด	-	ทั้งหมด	-	ทั้งหมด	-	All, total
+Both, entire	/	ทั้ง	/	ทั้ง	/	ทั้ง	/	ทั้ง	/	ทั้ง	/	ทั้ง	/	ทั้ง	/	ทั้ง	/	ทั้ง	/	Both, entire
 
-เท่าไร	-	เท่าไร	-	How much, how many	-	เท่าไร	-	เท่าไร	-	เท่าไร	-	เท่าไร	-	เท่าไร	-	เท่าไร	-	How much, how many
+All, total	/	ทั้งหมด	/	ทั้งหมด	/	ทั้งหมด	/	ทั้งหมด	/	ทั้งหมด	/	ทั้งหมด	/	ทั้งหมด	/	ทั้งหมด	/	ทั้งหมด	/	All, total
 
-แบ่ง	-	แบ่ง	-	Divide	-	แบ่ง	-	แบ่ง	-	แบ่ง	-	แบ่ง	-	แบ่ง	-	แบ่ง	-	Divide
+How much, how many	/	เท่าไร	/	เท่าไร	/	เท่าไร	/	เท่าไร	/	เท่าไร	/	เท่าไร	/	เท่าไร	/	เท่าไร	/	เท่าไร	/	How much, how many
 
-แบ่งออกเป็น	-	แบ่งออกเป็น	-	Divided into	-	แบ่งออกเป็น	-	แบ่งออกเป็น	-	แบ่งออกเป็น	-	แบ่งออกเป็น	-	แบ่งออกเป็น	-	แบ่งออกเป็น	-	Divided into
+Divide	/	แบ่ง	/	แบ่ง	/	แบ่ง	/	แบ่ง	/	แบ่ง	/	แบ่ง	/	แบ่ง	/	แบ่ง	/	แบ่ง	/	Divide
 
-วิทยาลัย	-	วิทยาลัย	-	College	-	วิทยาลัย	-	วิทยาลัย	-	วิทยาลัย	-	วิทยาลัย	-	วิทยาลัย	-	วิทยาลัย	-	College
+Divided into	/	แบ่งออกเป็น	/	แบ่งออกเป็น	/	แบ่งออกเป็น	/	แบ่งออกเป็น	/	แบ่งออกเป็น	/	แบ่งออกเป็น	/	แบ่งออกเป็น	/	แบ่งออกเป็น	/	แบ่งออกเป็น	/	Divided into
 
-อาหรับ	-	อาหรับ	-	Arabic	-	อาหรับ	-	อาหรับ	-	อาหรับ	-	อาหรับ	-	อาหรับ	-	อาหรับ	-	Arabic
+College	/	วิทยาลัย	/	วิทยาลัย	/	วิทยาลัย	/	วิทยาลัย	/	วิทยาลัย	/	วิทยาลัย	/	วิทยาลัย	/	วิทยาลัย	/	วิทยาลัย	/	College
 
-ยุโรป	-	ยุโรป	-	Europe	-	ยุโรป	-	ยุโรป	-	ยุโรป	-	ยุโรป	-	ยุโรป	-	ยุโรป	-	Europe
+Arabic	/	อาหรับ	/	อาหรับ	/	อาหรับ	/	อาหรับ	/	อาหรับ	/	อาหรับ	/	อาหรับ	/	อาหรับ	/	อาหรับ	/	Arabic
 
-คณะภาษายุโรปตะวันออก	-	คณะภาษายุโรปตะวันออก	-	Faculty of Eastern European Languages	-	คณะภาษายุโรปตะวันออก	-	คณะภาษายุโรปตะวันออก	-	คณะภาษายุโรปตะวันออก	-	คณะภาษายุโรปตะวันออก	-	คณะภาษายุโรปตะวันออก	-	คณะภาษายุโรปตะวันออก	-	Faculty of Eastern European Languages
+Europe	/	ยุโรป	/	ยุโรป	/	ยุโรป	/	ยุโรป	/	ยุโรป	/	ยุโรป	/	ยุโรป	/	ยุโรป	/	ยุโรป	/	Europe
 
-วิทยาลัยภาษาอังกฤษ	-	วิทยาลัยภาษาอังกฤษ	-	College of English Language	-	วิทยาลัยภาษาอังกฤษ	-	วิทยาลัยภาษาอังกฤษ	-	วิทยาลัยภาษาอังกฤษ	-	วิทยาลัยภาษาอังกฤษ	-	วิทยาลัยภาษาอังกฤษ	-	วิทยาลัยภาษาอังกฤษ	-	College of English Language
+Faculty of Eastern European Languages	/	คณะภาษายุโรปตะวันออก	/	คณะภาษายุโรปตะวันออก	/	คณะภาษายุโรปตะวันออก	/	คณะภาษายุโรปตะวันออก	/	คณะภาษายุโรปตะวันออก	/	คณะภาษายุโรปตะวันออก	/	คณะภาษายุโรปตะวันออก	/	คณะภาษายุโรปตะวันออก	/	คณะภาษายุโรปตะวันออก	/	Faculty of Eastern European Languages
 
-วิทยาลัยภาษารัสเซีย	-	วิทยาลัยภาษารัสเซีย	-	College of Russian Language	-	วิทยาลัยภาษารัสเซีย	-	วิทยาลัยภาษารัสเซีย	-	วิทยาลัยภาษารัสเซีย	-	วิทยาลัยภาษารัสเซีย	-	วิทยาลัยภาษารัสเซีย	-	วิทยาลัยภาษารัสเซีย	-	College of Russian Language
+College of English Language	/	วิทยาลัยภาษาอังกฤษ	/	วิทยาลัยภาษาอังกฤษ	/	วิทยาลัยภาษาอังกฤษ	/	วิทยาลัยภาษาอังกฤษ	/	วิทยาลัยภาษาอังกฤษ	/	วิทยาลัยภาษาอังกฤษ	/	วิทยาลัยภาษาอังกฤษ	/	วิทยาลัยภาษาอังกฤษ	/	วิทยาลัยภาษาอังกฤษ	/	College of English Language
 
-วัฒนธรรม	-	วัฒนธรรม	-	Culture	-	วัฒนธรรม	-	วัฒนธรรม	-	วัฒนธรรม	-	วัฒนธรรม	-	วัฒนธรรม	-	วัฒนธรรม	-	Culture
+College of Russian Language	/	วิทยาลัยภาษารัสเซีย	/	วิทยาลัยภาษารัสเซีย	/	วิทยาลัยภาษารัสเซีย	/	วิทยาลัยภาษารัสเซีย	/	วิทยาลัยภาษารัสเซีย	/	วิทยาลัยภาษารัสเซีย	/	วิทยาลัยภาษารัสเซีย	/	วิทยาลัยภาษารัสเซีย	/	วิทยาลัยภาษารัสเซีย	/	College of Russian Language
 
-วัฒนธรรมจีน	-	วัฒนธรรมจีน	-	Chinese culture	-	วัฒนธรรมจีน	-	วัฒนธรรมจีน	-	วัฒนธรรมจีน	-	วัฒนธรรมจีน	-	วัฒนธรรมจีน	-	วัฒนธรรมจีน	-	Chinese culture
+Culture	/	วัฒนธรรม	/	วัฒนธรรม	/	วัฒนธรรม	/	วัฒนธรรม	/	วัฒนธรรม	/	วัฒนธรรม	/	วัฒนธรรม	/	วัฒนธรรม	/	วัฒนธรรม	/	Culture
 
-วิทยาลัยภาษาและวัฒนธรรมจีน	-	วิทยาลัยภาษาและวัฒนธรรมจีน	-	College of Chinese Language and Culture	-	วิทยาลัยภาษาและวัฒนธรรมจีน	-	วิทยาลัยภาษาและวัฒนธรรมจีน	-	วิทยาลัยภาษาและวัฒนธรรมจีน	-	วิทยาลัยภาษาและวัฒนธรรมจีน	-	วิทยาลัยภาษาและวัฒนธรรมจีน	-	วิทยาลัยภาษาและวัฒนธรรมจีน	-	College of Chinese Language and Culture
+Chinese culture	/	วัฒนธรรมจีน	/	วัฒนธรรมจีน	/	วัฒนธรรมจีน	/	วัฒนธรรมจีน	/	วัฒนธรรมจีน	/	วัฒนธรรมจีน	/	วัฒนธรรมจีน	/	วัฒนธรรมจีน	/	วัฒนธรรมจีน	/	Chinese culture
 
-การค้า	-	การค้า	-	Trade, commerce	-	การค้า	-	การค้า	-	การค้า	-	การค้า	-	การค้า	-	การค้า	-	Trade, commerce
+College of Chinese Language and Culture	/	วิทยาลัยภาษาและวัฒนธรรมจีน	/	วิทยาลัยภาษาและวัฒนธรรมจีน	/	วิทยาลัยภาษาและวัฒนธรรมจีน	/	วิทยาลัยภาษาและวัฒนธรรมจีน	/	วิทยาลัยภาษาและวัฒนธรรมจีน	/	วิทยาลัยภาษาและวัฒนธรรมจีน	/	วิทยาลัยภาษาและวัฒนธรรมจีน	/	วิทยาลัยภาษาและวัฒนธรรมจีน	/	วิทยาลัยภาษาและวัฒนธรรมจีน	/	College of Chinese Language and Culture
 
-ระหว่าง	-	ระหว่าง	-	Between	-	ระหว่าง	-	ระหว่าง	-	ระหว่าง	-	ระหว่าง	-	ระหว่าง	-	ระหว่าง	-	Between
+Trade, commerce	/	การค้า	/	การค้า	/	การค้า	/	การค้า	/	การค้า	/	การค้า	/	การค้า	/	การค้า	/	การค้า	/	Trade, commerce
 
-การค้าระหว่างประเทศ	-	การค้าระหว่างประเทศ	-	International trade	-	การค้าระหว่างประเทศ	-	การค้าระหว่างประเทศ	-	การค้าระหว่างประเทศ	-	การค้าระหว่างประเทศ	-	การค้าระหว่างประเทศ	-	การค้าระหว่างประเทศ	-	International trade
+Between	/	ระหว่าง	/	ระหว่าง	/	ระหว่าง	/	ระหว่าง	/	ระหว่าง	/	ระหว่าง	/	ระหว่าง	/	ระหว่าง	/	ระหว่าง	/	Between
 
-วิทยาลัยการค้าระหว่างประเทศ	-	วิทยาลัยการค้าระหว่างประเทศ	-	College of International Trade	-	วิทยาลัยการค้าระหว่างประเทศ	-	วิทยาลัยการค้าระหว่างประเทศ	-	วิทยาลัยการค้าระหว่างประเทศ	-	วิทยาลัยการค้าระหว่างประเทศ	-	วิทยาลัยการค้าระหว่างประเทศ	-	วิทยาลัยการค้าระหว่างประเทศ	-	College of International Trade
+International trade	/	การค้าระหว่างประเทศ	/	การค้าระหว่างประเทศ	/	การค้าระหว่างประเทศ	/	การค้าระหว่างประเทศ	/	การค้าระหว่างประเทศ	/	การค้าระหว่างประเทศ	/	การค้าระหว่างประเทศ	/	การค้าระหว่างประเทศ	/	การค้าระหว่างประเทศ	/	International trade
 
-ชั้นสูง	-	ชั้นสูง	-	Advanced, higher	-	ชั้นสูง	-	ชั้นสูง	-	ชั้นสูง	-	ชั้นสูง	-	ชั้นสูง	-	ชั้นสูง	-	Advanced, higher
+College of International Trade	/	วิทยาลัยการค้าระหว่างประเทศ	/	วิทยาลัยการค้าระหว่างประเทศ	/	วิทยาลัยการค้าระหว่างประเทศ	/	วิทยาลัยการค้าระหว่างประเทศ	/	วิทยาลัยการค้าระหว่างประเทศ	/	วิทยาลัยการค้าระหว่างประเทศ	/	วิทยาลัยการค้าระหว่างประเทศ	/	วิทยาลัยการค้าระหว่างประเทศ	/	วิทยาลัยการค้าระหว่างประเทศ	/	College of International Trade
 
-การแปล	-	การแปล	-	Translation	-	การแปล	-	การแปล	-	การแปล	-	การแปล	-	การแปล	-	การแปล	-	Translation
+Advanced, higher	/	ชั้นสูง	/	ชั้นสูง	/	ชั้นสูง	/	ชั้นสูง	/	ชั้นสูง	/	ชั้นสูง	/	ชั้นสูง	/	ชั้นสูง	/	ชั้นสูง	/	Advanced, higher
 
-วิทยาลัยการแปลชั้นสูง	-	วิทยาลัยการแปลชั้นสูง	-	College of Advanced Translation	-	วิทยาลัยการแปลชั้นสูง	-	วิทยาลัยการแปลชั้นสูง	-	วิทยาลัยการแปลชั้นสูง	-	วิทยาลัยการแปลชั้นสูง	-	วิทยาลัยการแปลชั้นสูง	-	วิทยาลัยการแปลชั้นสูง	-	College of Advanced Translation
+Translation	/	การแปล	/	การแปล	/	การแปล	/	การแปล	/	การแปล	/	การแปล	/	การแปล	/	การแปล	/	การแปล	/	Translation
 
-วิทยาลัยออนไลน์	-	วิทยาลัยออนไลน์	-	Online college	-	วิทยาลัยออนไลน์	-	วิทยาลัยออนไลน์	-	วิทยาลัยออนไลน์	-	วิทยาลัยออนไลน์	-	วิทยาลัยออนไลน์	-	วิทยาลัยออนไลน์	-	Online college
+College of Advanced Translation	/	วิทยาลัยการแปลชั้นสูง	/	วิทยาลัยการแปลชั้นสูง	/	วิทยาลัยการแปลชั้นสูง	/	วิทยาลัยการแปลชั้นสูง	/	วิทยาลัยการแปลชั้นสูง	/	วิทยาลัยการแปลชั้นสูง	/	วิทยาลัยการแปลชั้นสูง	/	วิทยาลัยการแปลชั้นสูง	/	วิทยาลัยการแปลชั้นสูง	/	College of Advanced Translation
 
-ประมาณ	-	ประมาณ	-	Approximately	-	ประมาณ	-	ประมาณ	-	ประมาณ	-	ประมาณ	-	ประมาณ	-	ประมาณ	-	Approximately
+Online college	/	วิทยาลัยออนไลน์	/	วิทยาลัยออนไลน์	/	วิทยาลัยออนไลน์	/	วิทยาลัยออนไลน์	/	วิทยาลัยออนไลน์	/	วิทยาลัยออนไลน์	/	วิทยาลัยออนไลน์	/	วิทยาลัยออนไลน์	/	วิทยาลัยออนไลน์	/	Online college
 
-กว่า	-	กว่า	-	More than, over	-	กว่า	-	กว่า	-	กว่า	-	กว่า	-	กว่า	-	กว่า	-	More than, over
+Approximately	/	ประมาณ	/	ประมาณ	/	ประมาณ	/	ประมาณ	/	ประมาณ	/	ประมาณ	/	ประมาณ	/	ประมาณ	/	ประมาณ	/	Approximately
 
-ชาว	-	ชาว	-	People of (nationality, ethnicity)	-	ชาว	-	ชาว	-	ชาว	-	ชาว	-	ชาว	-	ชาว	-	People of (nationality, ethnicity)
+More than, over	/	กว่า	/	กว่า	/	กว่า	/	กว่า	/	กว่า	/	กว่า	/	กว่า	/	กว่า	/	กว่า	/	More than, over
 
-ต่างประเทศ	-	ต่างประเทศ	-	Foreign, abroad	-	ต่างประเทศ	-	ต่างประเทศ	-	ต่างประเทศ	-	ต่างประเทศ	-	ต่างประเทศ	-	ต่างประเทศ	-	Foreign, abroad
+People of (nationality, ethnicity)	/	ชาว	/	ชาว	/	ชาว	/	ชาว	/	ชาว	/	ชาว	/	ชาว	/	ชาว	/	ชาว	/	People of (nationality, ethnicity)
 
-ถ้า	-	ถ้า	-	If	-	ถ้า	-	ถ้า	-	ถ้า	-	ถ้า	-	ถ้า	-	ถ้า	-	If
+Foreign, abroad	/	ต่างประเทศ	/	ต่างประเทศ	/	ต่างประเทศ	/	ต่างประเทศ	/	ต่างประเทศ	/	ต่างประเทศ	/	ต่างประเทศ	/	ต่างประเทศ	/	ต่างประเทศ	/	Foreign, abroad
 
-รวมทั้ง	-	รวมทั้ง	-	Including	-	รวมทั้ง	-	รวมทั้ง	-	รวมทั้ง	-	รวมทั้ง	-	รวมทั้ง	-	รวมทั้ง	-	Including
+If	/	ถ้า	/	ถ้า	/	ถ้า	/	ถ้า	/	ถ้า	/	ถ้า	/	ถ้า	/	ถ้า	/	ถ้า	/	If
 
-เจ้าหน้าที่	-	เจ้าหน้าที่	-	Official, staff	-	เจ้าหน้าที่	-	เจ้าหน้าที่	-	เจ้าหน้าที่	-	เจ้าหน้าที่	-	เจ้าหน้าที่	-	เจ้าหน้าที่	-	Official, staff
+Including	/	รวมทั้ง	/	รวมทั้ง	/	รวมทั้ง	/	รวมทั้ง	/	รวมทั้ง	/	รวมทั้ง	/	รวมทั้ง	/	รวมทั้ง	/	รวมทั้ง	/	Including
 
-อื่นๆ	-	อื่นๆ	-	Others	-	อื่นๆ	-	อื่นๆ	-	อื่นๆ	-	อื่นๆ	-	อื่นๆ	-	อื่นๆ	-	Others
+Official, staff	/	เจ้าหน้าที่	/	เจ้าหน้าที่	/	เจ้าหน้าที่	/	เจ้าหน้าที่	/	เจ้าหน้าที่	/	เจ้าหน้าที่	/	เจ้าหน้าที่	/	เจ้าหน้าที่	/	เจ้าหน้าที่	/	Official, staff
 
-คง	-	คง	-	Probably, likely	-	คง	-	คง	-	คง	-	คง	-	คง	-	คง	-	Probably, likely
+Others	/	อื่นๆ	/	อื่นๆ	/	อื่นๆ	/	อื่นๆ	/	อื่นๆ	/	อื่นๆ	/	อื่นๆ	/	อื่นๆ	/	อื่นๆ	/	Others
 
-อยาก	-	อยาก	-	Want, wish	-	อยาก	-	อยาก	-	อยาก	-	อยาก	-	อยาก	-	อยาก	-	Want, wish
+Probably, likely	/	คง	/	คง	/	คง	/	คง	/	คง	/	คง	/	คง	/	คง	/	คง	/	Probably, likely
 
-สถา	-	สถา	-	Institution, place (abbreviation)	-	สถา	-	สถา	-	สถา	-	สถา	-	สถา	-	สถา	-	Institution, place (abbreviation)
+Want, wish	/	อยาก	/	อยาก	/	อยาก	/	อยาก	/	อยาก	/	อยาก	/	อยาก	/	อยาก	/	อยาก	/	Want, wish
 
-สถานี	-	สถานี	-	Station	-	สถานี	-	สถานี	-	สถานี	-	สถานี	-	สถานี	-	สถานี	-	Station
+Institution, place (abbreviation)	/	สถา	/	สถา	/	สถา	/	สถา	/	สถา	/	สถา	/	สถา	/	สถา	/	สถา	/	Institution, place (abbreviation)
 
-สถาบัน	-	สถาบัน	-	Institute	-	สถาบัน	-	สถาบัน	-	สถาบัน	-	สถาบัน	-	สถาบัน	-	สถาบัน	-	Institute
+Station	/	สถานี	/	สถานี	/	สถานี	/	สถานี	/	สถานี	/	สถานี	/	สถานี	/	สถานี	/	สถานี	/	Station
 
-การศึกษา	-	การศึกษา	-	Education	-	การศึกษา	-	การศึกษา	-	การศึกษา	-	การศึกษา	-	การศึกษา	-	การศึกษา	-	Education
+Institute	/	สถาบัน	/	สถาบัน	/	สถาบัน	/	สถาบัน	/	สถาบัน	/	สถาบัน	/	สถาบัน	/	สถาบัน	/	สถาบัน	/	Institute
 
-สถาบันการศึกษา	-	สถาบันการศึกษา	-	Educational institution	-	สถาบันการศึกษา	-	สถาบันการศึกษา	-	สถาบันการศึกษา	-	สถาบันการศึกษา	-	สถาบันการศึกษา	-	สถาบันการศึกษา	-	Educational institution
+Education	/	การศึกษา	/	การศึกษา	/	การศึกษา	/	การศึกษา	/	การศึกษา	/	การศึกษา	/	การศึกษา	/	การศึกษา	/	การศึกษา	/	Education
 
-อุดม	-	อุดม	-	Supreme, abundant	-	อุดม	-	อุดม	-	อุดม	-	อุดม	-	อุดม	-	อุดม	-	Supreme, abundant
+Educational institution	/	สถาบันการศึกษา	/	สถาบันการศึกษา	/	สถาบันการศึกษา	/	สถาบันการศึกษา	/	สถาบันการศึกษา	/	สถาบันการศึกษา	/	สถาบันการศึกษา	/	สถาบันการศึกษา	/	สถาบันการศึกษา	/	Educational institution
 
-อุดมศึกษา	-	อุดมศึกษา	-	Higher education	-	อุดมศึกษา	-	อุดมศึกษา	-	อุดมศึกษา	-	อุดมศึกษา	-	อุดมศึกษา	-	อุดมศึกษา	-	Higher education
+Supreme, abundant	/	อุดม	/	อุดม	/	อุดม	/	อุดม	/	อุดม	/	อุดม	/	อุดม	/	อุดม	/	อุดม	/	Supreme, abundant
 
-สถาบันอุดมศึกษา	-	สถาบันอุดมศึกษา	-	Higher education institution	-	สถาบันอุดมศึกษา	-	สถาบันอุดมศึกษา	-	สถาบันอุดมศึกษา	-	สถาบันอุดมศึกษา	-	สถาบันอุดมศึกษา	-	สถาบันอุดมศึกษา	-	Higher education institution
+Higher education	/	อุดมศึกษา	/	อุดมศึกษา	/	อุดมศึกษา	/	อุดมศึกษา	/	อุดมศึกษา	/	อุดมศึกษา	/	อุดมศึกษา	/	อุดมศึกษา	/	อุดมศึกษา	/	Higher education
 
-แห่ง	-	แห่ง	-	Place, location, classifier for institutions	-	แห่ง	-	แห่ง	-	แห่ง	-	แห่ง	-	แห่ง	-	แห่ง	-	Place, location, classifier for institutions
+Higher education institution	/	สถาบันอุดมศึกษา	/	สถาบันอุดมศึกษา	/	สถาบันอุดมศึกษา	/	สถาบันอุดมศึกษา	/	สถาบันอุดมศึกษา	/	สถาบันอุดมศึกษา	/	สถาบันอุดมศึกษา	/	สถาบันอุดมศึกษา	/	สถาบันอุดมศึกษา	/	Higher education institution
 
-แน่นอน	-	แน่นอน	-	Certainly, definitely	-	แน่นอน	-	แน่นอน	-	แน่นอน	-	แน่นอน	-	แน่นอน	-	แน่นอน	-	Certainly, definitely
+Place, location, classifier for institutions	/	แห่ง	/	แห่ง	/	แห่ง	/	แห่ง	/	แห่ง	/	แห่ง	/	แห่ง	/	แห่ง	/	แห่ง	/	Place, location, classifier for institutions
 
-เท่าที่	-	เท่าที่	-	As much as, as far as	-	เท่าที่	-	เท่าที่	-	เท่าที่	-	เท่าที่	-	เท่าที่	-	เท่าที่	-	As much as, as far as
+Certainly, definitely	/	แน่นอน	/	แน่นอน	/	แน่นอน	/	แน่นอน	/	แน่นอน	/	แน่นอน	/	แน่นอน	/	แน่นอน	/	แน่นอน	/	Certainly, definitely
 
-ซี	-	ซี	-	C (Latin letter)	-	ซี	-	ซี	-	ซี	-	ซี	-	ซี	-	ซี	-	C (Latin letter)
+As much as, as far as	/	เท่าที่	/	เท่าที่	/	เท่าที่	/	เท่าที่	/	เท่าที่	/	เท่าที่	/	เท่าที่	/	เท่าที่	/	เท่าที่	/	As much as, as far as
 
-เช่นนั้น	-	เช่นนั้น	-	Like that, in such a way	-	เช่นนั้น	-	เช่นนั้น	-	เช่นนั้น	-	เช่นนั้น	-	เช่นนั้น	-	เช่นนั้น	-	Like that, in such a way
+C (Latin letter)	/	ซี	/	ซี	/	ซี	/	ซี	/	ซี	/	ซี	/	ซี	/	ซี	/	ซี	/	C (Latin letter)
 
-เฉพาะ...ก็...	-	เฉพาะ...ก็...	-	Only...also...	-	เฉพาะ...ก็...	-	เฉพาะ...ก็...	-	เฉพาะ...ก็...	-	เฉพาะ...ก็...	-	เฉพาะ...ก็...	-	เฉพาะ...ก็...	-	Only...also...
+Like that, in such a way	/	เช่นนั้น	/	เช่นนั้น	/	เช่นนั้น	/	เช่นนั้น	/	เช่นนั้น	/	เช่นนั้น	/	เช่นนั้น	/	เช่นนั้น	/	เช่นนั้น	/	Like that, in such a way
 
-ผู้	-	ผู้	-	Person, classifier for people	-	ผู้	-	ผู้	-	ผู้	-	ผู้	-	ผู้	-	ผู้	-	Person, classifier for people
+Only...also...	/	 เฉพาะ...ก็...	/	เฉพาะ...ก็...	/	เฉพาะ...ก็...	/	เฉพาะ...ก็...	/	เฉพาะ...ก็...	/	เฉพาะ...ก็...	/	เฉพาะ...ก็...	/	เฉพาะ...ก็...	/	เฉพาะ...ก็...	/	Only...also...
 
-สมัคร	-	สมัคร	-	Apply, register	-	สมัคร	-	สมัคร	-	สมัคร	-	สมัคร	-	สมัคร	-	สมัคร	-	Apply, register
+Person, classifier for people	/	ผู้	/	ผู้	/	ผู้	/	ผู้	/	ผู้	/	ผู้	/	ผู้	/	ผู้	/	ผู้	/	Person, classifier for people
 
-สอบ	-	สอบ	-	Exam, test	-	สอบ	-	สอบ	-	สอบ	-	สอบ	-	สอบ	-	สอบ	-	Exam, test
+Manager	/	ผู้จัดการ	/	ผู้จัดการ	/	ผู้จัดการ	/	ผู้จัดการ	/	ผู้จัดการ	/	ผู้จัดการ	/	ผู้จัดการ	/	ผู้จัดการ	/	ผู้จัดการ	/	Manager
 
-สอบเข้าได้	-	สอบเข้าได้	-	Pass an entrance exam	-	สอบเข้าได้	-	สอบเข้าได้	-	สอบเข้าได้	-	สอบเข้าได้	-	สอบเข้าได้	-	สอบเข้าได้	-	Pass an entrance exam
+Apply, register	/	สมัคร	/	สมัคร	/	สมัคร	/	สมัคร	/	สมัคร	/	สมัคร	/	สมัคร	/	สมัคร	/	สมัคร	/	Apply, register
 
-สมัครสอบเข้ามหาวิทยาลัย	-	สมัครสอบเข้ามหาวิทยาลัย	-	Apply for a university entrance exam	-	สมัครสอบเข้ามหาวิทยาลัย	-	สมัครสอบเข้ามหาวิทยาลัย	-	สมัครสอบเข้ามหาวิทยาลัย	-	สมัครสอบเข้ามหาวิทยาลัย	-	สมัครสอบเข้ามหาวิทยาลัย	-	สมัครสอบเข้ามหาวิทยาลัย	-	Apply for a university entrance exam
+Application form	/	ใบสมัคร	/	ใบสมัคร	/	ใบสมัคร	/	ใบสมัคร	/	ใบสมัคร	/	ใบสมัคร	/	ใบสมัคร	/	ใบสมัคร	/	ใบสมัคร	/	Application form
 
-ชั้นบันได	-	ชั้นบันได	-	Staircase, stairs	-	ชั้นบันได	-	ชั้นบันได	-	ชั้นบันได	-	ชั้นบันได	-	ชั้นบันได	-	ชั้นบันได	-	Staircase, stairs
+Exam, test	/	สอบ	/	สอบ	/	สอบ	/	สอบ	/	สอบ	/	สอบ	/	สอบ	/	สอบ	/	สอบ	/	Exam, test
 
-ไฟล์	-	ไฟล์	-	File (digital or document)	-	ไฟล์	-	ไฟล์	-	ไฟล์	-	ไฟล์	-	ไฟล์	-	ไฟล์	-	File (digital or document)
+Written exam	/	สอบข้อเขียน	/	สอบข้อเขียน	/	สอบข้อเขียน	/	สอบข้อเขียน	/	สอบข้อเขียน	/	สอบข้อเขียน	/	สอบข้อเขียน	/	สอบข้อเขียน	/	สอบข้อเขียน	/	Written exam
 
-ล็อบบี้	-	ล็อบบี้	-	Lobby	-	ล็อบบี้	-	ล็อบบี้	-	ล็อบบี้	-	ล็อบบี้	-	ล็อบบี้	-	ล็อบบี้	-	Lobby
+Listening exam	/	สอบข้อฟัง	/	สอบข้อฟัง	/	สอบข้อฟัง	/	สอบข้อฟัง	/	สอบข้อฟัง	/	สอบข้อฟัง	/	สอบข้อฟัง	/	สอบข้อฟัง	/	สอบข้อฟัง	/	Listening exam
 
-พลัง	-	พลัง	-	Power, energy	-	พลัง	-	พลัง	-	พลัง	-	พลัง	-	พลัง	-	พลัง	-	Power, energy
+Pass an entrance exam	/	สอบเข้าได้	/	สอบเข้าได้	/	สอบเข้าได้	/	สอบเข้าได้	/	สอบเข้าได้	/	สอบเข้าได้	/	สอบเข้าได้	/	สอบเข้าได้	/	สอบเข้าได้	/	Pass an entrance exam
 
-ข้อมูล	-	ข้อมูล	-	Information, data	-	ข้อมูล	-	ข้อมูล	-	ข้อมูล	-	ข้อมูล	-	ข้อมูล	-	ข้อมูล	-	Information, data
+Apply for a university entrance exam	/	สมัครสอบเข้ามหาวิทยาลัย	/	สมัครสอบเข้ามหาวิทยาลัย	/	สมัครสอบเข้ามหาวิทยาลัย	/	สมัครสอบเข้ามหาวิทยาลัย	/	สมัครสอบเข้ามหาวิทยาลัย	/	สมัครสอบเข้ามหาวิทยาลัย	/	สมัครสอบเข้ามหาวิทยาลัย	/	สมัครสอบเข้ามหาวิทยาลัย	/	สมัครสอบเข้ามหาวิทยาลัย	/	Apply for a university entrance exam
 
-ไว้ใจ	-	ไว้ใจ	-	Trust	-	ไว้ใจ	-	ไว้ใจ	-	ไว้ใจ	-	ไว้ใจ	-	ไว้ใจ	-	ไว้ใจ	-	Trust
+Staircase, stairs	/	ขั้นบันได	/	ขั้นบันได	/	ขั้นบันได	/	ขั้นบันได	/	ขั้นบันได	/	ขั้นบันได	/	ขั้นบันได	/	ขั้นบันได	/	ขั้นบันได	/	Staircase, stairs
 
-นาน	-	นาน	-	Long (time duration)	-	นาน	-	นาน	-	นาน	-	นาน	-	นาน	-	นาน	-	Long (time duration)
+File (digital or document)	/	ไฟล์	/	ไฟล์	/	ไฟล์	/	ไฟล์	/	ไฟล์	/	ไฟล์	/	ไฟล์	/	ไฟล์	/	ไฟล์	/	File (digital or document)
 
-นิด	-	นิด	-	A little, slightly	-	นิด	-	นิด	-	นิด	-	นิด	-	นิด	-	นิด	-	A little, slightly
+Lobby	/	ล็อบบี้	/	ล็อบบี้	/	ล็อบบี้	/	ล็อบบี้	/	ล็อบบี้	/	ล็อบบี้	/	ล็อบบี้	/	ล็อบบี้	/	ล็อบบี้	/	Lobby
 
-การเงิน	-	การเงิน	-	Finance	-	การเงิน	-	การเงิน	-	การเงิน	-	การเงิน	-	การเงิน	-	การเงิน	-	Finance
+Power, energy	/	พลัง	/	พลัง	/	พลัง	/	พลัง	/	พลัง	/	พลัง	/	พลัง	/	พลัง	/	พลัง	/	Power, energy
 
-การทหาร	-	การทหาร	-	Military affairs	-	การทหาร	-	การทหาร	-	การทหาร	-	การทหาร	-	การทหาร	-	การทหาร	-	Military affairs
+Information, data	/	ข้อมูล	/	ข้อมูล	/	ข้อมูล	/	ข้อมูล	/	ข้อมูล	/	ข้อมูล	/	ข้อมูล	/	ข้อมูล	/	ข้อมูล	/	Information, data
 
-การต่างประเทศ	-	การต่างประเทศ	-	Foreign affairs	-	การต่างประเทศ	-	การต่างประเทศ	-	การต่างประเทศ	-	การต่างประเทศ	-	การต่างประเทศ	-	การต่างประเทศ	-	Foreign affairs
+Trust	/	ไว้ใจ	/	ไว้ใจ	/	ไว้ใจ	/	ไว้ใจ	/	ไว้ใจ	/	ไว้ใจ	/	ไว้ใจ	/	ไว้ใจ	/	ไว้ใจ	/	Trust
 
-ความลับ	-	ความลับ	-	Secret, confidentiality	-	ความลับ	-	ความลับ	-	ความลับ	-	ความลับ	-	ความลับ	-	ความลับ	-	Secret, confidentiality
+Long (time duration)	/	นาน	/	นาน	/	นาน	/	นาน	/	นาน	/	นาน	/	นาน	/	นาน	/	นาน	/	Long (time duration)
 
-แฮมเบอร์เกอร์	-	แฮมเบอร์เกอร์	-	Hamburger	-	แฮมเบอร์เกอร์	-	แฮมเบอร์เกอร์	-	แฮมเบอร์เกอร์	-	แฮมเบอร์เกอร์	-	แฮมเบอร์เกอร์	-	แฮมเบอร์เกอร์	-	Hamburger<img width="1866" alt="image" src="https://github.com/user-attachments/assets/88c6671a-7684-4cb3-9fc2-02381b0e9838" />
+Occasionally, from time to time	/	นาน ๆ	/	นาน ๆ	/	นาน ๆ	/	นาน ๆ	/	นาน ๆ	/	นาน ๆ	/	นาน ๆ	/	นาน ๆ	/	นาน ๆ	/	Occasionally, from time to time
 
+A little, slightly	/	นิด	/	นิด	/	นิด	/	นิด	/	นิด	/	นิด	/	นิด	/	นิด	/	นิด	/	A little, slightly
 
+A little bit, slightly	/	นิดๆ หน่อยๆ	/	นิดๆ หน่อยๆ	/	นิดๆ หน่อยๆ	/	นิดๆ หน่อยๆ	/	นิดๆ หน่อยๆ	/	นิดๆ หน่อยๆ	/	นิดๆ หน่อยๆ	/	นิดๆ หน่อยๆ	/	นิดๆ หน่อยๆ	/	A little bit, slightly
+
+Finance	/	การเงิน	/	การเงิน	/	การเงิน	/	การเงิน	/	การเงิน	/	การเงิน	/	การเงิน	/	การเงิน	/	การเงิน	/	Finance
+
+Military affairs	/	การทหาร	/	การทหาร	/	การทหาร	/	การทหาร	/	การทหาร	/	การทหาร	/	การทหาร	/	การทหาร	/	การทหาร	/	Military affairs
+
+Foreign affairs	/	การต่างประเทศ	/	การต่างประเทศ	/	การต่างประเทศ	/	การต่างประเทศ	/	การต่างประเทศ	/	การต่างประเทศ	/	การต่างประเทศ	/	การต่างประเทศ	/	การต่างประเทศ	/	Foreign affairs
+
+Secret, confidentiality	/	ความลับ	/	ความลับ	/	ความลับ	/	ความลับ	/	ความลับ	/	ความลับ	/	ความลับ	/	ความลับ	/	ความลับ	/	Secret, confidentiality
+
+Hamburger	/	แฮมเบอร์เกอร์	/	แฮมเบอร์เกอร์	/	แฮมเบอร์เกอร์	/	แฮมเบอร์เกอร์	/	แฮมเบอร์เกอร์	/	แฮมเบอร์เกอร์	/	แฮมเบอร์เกอร์	/	แฮมเบอร์เกอร์	/	แฮมเบอร์เกอร์	/	Hamburger
